<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteLight"
    tools:context=".activity.BootActivity">

    <ImageView
        android:id="@+id/iV_start_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bg_top"
        android:translationY="-210dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_start_logo"
        android:layout_width="318dp"
        android:layout_height="99dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iV_start_banner"
        app:srcCompat="@drawable/logo_bib" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/black"
        android:text="@string/start_title"
        android:textColor="#ffffff"
        android:textSize="36dp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/bold"
        android:onClick="toTimeTable"
        android:text="@string/start_btn_plan"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tV_start_class"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/input"
        android:drawableStart="@drawable/start_user"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimary"
        android:hint="@string/start_input_class"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:nextFocusLeft="@+id/tV_start_password"
        android:padding="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tV_start_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/input"
        android:drawableStart="@drawable/start_password"
        android:drawablePadding="15dp"
        android:drawableTint="@color/colorPrimary"
        android:imeOptions="actionDone"
        android:hint="@string/start_input_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV_start_class" />

</android.support.constraint.ConstraintLayout>